err/getpaid.paypal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/getpaid'...
Listing './lib/python3.5/site-packages/getpaid/paypal'...
Listing './lib/python3.5/site-packages/getpaid/paypal/browser'...
Listing './lib/python3.5/site-packages/getpaid/paypal/browser/templates'...
Listing './lib/python3.5/site-packages/getpaid/paypal/ipn'...
Compiling './lib/python3.5/site-packages/getpaid/paypal/ipn/submit_handler.py'...
***   File "./lib/python3.5/site-packages/getpaid/paypal/ipn/submit_handler.py", line 87
    raise IOError, 'IPN post-back failed'
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getpaid/paypal/ipn/templates'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/en'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/es'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/fi'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/it'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/nl'...
Listing './lib/python3.5/site-packages/getpaid/paypal/locales/nl/LC_MESSAGE'...
Listing './lib/python3.5/site-packages/getpaid.paypal-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
